# popeye

./: .dockerignore  .gitignore  Build.dockerfile  Dockerfile  LICENSE  Makefile  README.md  circle.yml  package.yaml  popeye.cabal  stack.yaml
app/: Main.hs
src/Popeye/: CLI.hs  Users.hs
