name:                popeye
version:             0.1.0.0
synopsis:            Generate an authorized_keys file from an IAM group
description:         Please see README.md
homepage:            http://github.com/codeclimate/popeye#readme
license:             MIT
license-file:        LICENSE
author:              Pat Brisbin
maintainer:          pat@codeclimate.com
copyright:           2016 Code Climate
category:            Network
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

flag static
  Description:   Compile statically
  Default:       False

library
  hs-source-dirs:      src
  exposed-modules:     Popeye.CLI
                       Popeye.Users
  build-depends:       base >= 4.7 && < 5
                     , amazonka
                     , amazonka-iam
                     , lens
                     , load-env
                     , optparse-applicative
                     , text
                     , transformers
  default-language:    Haskell2010

executable popeye
  hs-source-dirs:      app
  main-is:             Main.hs

  if flag(static)
    ghc-options:       -threaded -rtsopts -with-rtsopts=-N -static -optl-static -optl-pthread
  else
    ghc-options:       -threaded -rtsopts -with-rtsopts=-N

  build-depends:       base
                     , popeye
  default-language:    Haskell2010

test-suite popeye-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , popeye
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/codeclimate/popeye
